==> u-blox/ubxlib/port/platform/nrf5sdk/src/u_port_i2c.c <==
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "string.h"  // memset()
#include "u_error_common.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_i2c.h"
#include "u_port_private.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "nrf.h"
#include "nrf_gpio.h"  // For bus recovery
#include "nrfx_twim.h"
# define U_PORT_I2C_MAX_NUM 2

static void closeI2c(uPortI2cData_t *pI2c)
{
    if ((pI2c != NULL) && (pI2c->instance.p_twim != NULL)) {
        if (!pI2c->adopted) {
            nrfx_twim_uninit(&pI2c->instance);
        }
        uPortSemaphoreDelete(pI2c->completionSemaphore);
        // Zero the instance to indicate that it is no longer in use
        memset(&pI2c->instance, 0, sizeof(pI2c->instance));
    }
}

static int32_t openI2c(int32_t i2c, int32_t pinSda, int32_t pinSdc,
                       bool controller, bool adopt)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    nrfx_twim_t instance = {0};
    nrfx_twim_config_t cfg = NRFX_TWIM_DEFAULT_CONFIG;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((i2c >= 0) && (i2c < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[i2c].instance.p_twim == NULL) && controller &&
            (adopt || ((pinSda >= 0) && (pinSdc >= 0)))) {
            handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            switch (i2c) {
                case 0:
#if NRFX_TWIM0_ENABLED
                    instance.p_twim       = NRF_TWIM0;
                    instance.drv_inst_idx = NRFX_TWIM0_INST_IDX;
#endif
                    break;
                case 1:
#if NRFX_TWIM1_ENABLED
                    instance.p_twim       = NRF_TWIM1;
                    instance.drv_inst_idx = NRFX_TWIM1_INST_IDX;
#endif
                    break;
                default:
                    break;
            }
            if (instance.p_twim != NULL) {
                handleOrErrorCode = uPortSemaphoreCreate(&(gI2cData[i2c].completionSemaphore), 0, 1);
                if (handleOrErrorCode == 0) {
                    cfg.scl = pinSdc;
                    cfg.sda = pinSda;
                    cfg.frequency = clockHertzToEnum(U_PORT_I2C_CLOCK_FREQUENCY_HERTZ);
                    if (adopt ||
                        (nrfx_twim_init(&instance, &cfg, eventHandlerIrq, &(gI2cData[i2c])) == NRFX_SUCCESS)) {
                        gI2cData[i2c].clockHertz = U_PORT_I2C_CLOCK_FREQUENCY_HERTZ;
                        gI2cData[i2c].timeoutMs = U_PORT_I2C_TIMEOUT_MILLISECONDS;
                        gI2cData[i2c].pinSda = pinSda;
                        gI2cData[i2c].pinSdc = pinSdc;
                        gI2cData[i2c].adopted = adopt;
                        gI2cData[i2c].instance = instance;
                        // Return the I2C HW block number as the handle
                        handleOrErrorCode = i2c;
                    }
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortI2cSetClock(int32_t handle, int32_t clockHertz)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    int32_t clockEnumValue = clockHertzToEnum(clockHertz);

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].instance.p_twim != NULL) && (clockEnumValue >= 0)) {
            errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
            if (!gI2cData[handle].adopted) {
                nrf_twim_frequency_set(gI2cData[handle].instance.p_twim, clockEnumValue);
                gI2cData[handle].clockHertz = clockHertz;
                errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}
